--- a/app/styles/core.scss
+++ b/app/styles/core.scss
@@ -1,8 +1,12 @@
 /* COMPONENTES */
+
+@import 'common/bootstrap.min';
 @import 'partials/geral';
 @import 'partials/home';
 @import 'partials/header';
 @import 'partials/noivos';
+@import 'partials/aviagem';
+@import 'partials/eventos';
 @import 'partials/formulario';
+@import 'partials/galeria';
 @import 'partials/footer';
-@import 'common/bootstrap.min';
