--- a/app/styles/partials/aviagem.scss
+++ b/app/styles/partials/aviagem.scss
@@ -34,4 +34,7 @@
 	section.bg-2{
 		height: 200px;
 	}
+	.featured-right .featured .text.text-right, .featured-right .featured .text {
+		text-align:center;
+	}
 }
