--- a/app/styles/partials/header.scss
+++ b/app/styles/partials/header.scss
@@ -56,7 +56,10 @@
 @media (max-width: 767px) {
 	.headerHeart{
 		display: block!important;
-		margin-top: 7px;
+		margin-top: 9px;
+	}
+	#nav{
+		padding: 2px 0px;
 	}
 }
 
