--- a/app/styles/partials/noivos.scss
+++ b/app/styles/partials/noivos.scss
@@ -132,8 +132,30 @@ span.about_picframe::after, span.about_picframe::before{
         float: left;
         margin: 0 0 80px 0;
     }
+
+    .about_pic_container:hover .about_social{
+        opacity: 1;
+        transform: translateY(170%);
+        -webkit-transform:translateY(170%);
     }
+}
+
+@media screen and (max-width: 991px){
+    .about_pic_container:hover .about_social{
+        opacity: 1;
+        transform: translateY(120%);
+        -webkit-transform:translateY(120%);
+    }
+}
     
+@media screen and (max-width: 680px) and (min-width: 500px) {
+    .about_pic_container:hover .about_social{
+        opacity: 1;
+        transform: translateY(200%);
+        -webkit-transform:translateY(200%);
+    }
+  }
+
 @media screen and (max-width: 680px){
 .left12_first {
     width: 94%;
