--- a/app/styles/partials/geral.scss
+++ b/app/styles/partials/geral.scss
@@ -71,9 +71,9 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span{
 	color:#f9667e;
 }
 
-// section{
-// 	padding: 0px 0px 100px 0px;
-// }
+section{
+	padding: 50px 0px 50px 0px;
+}
 
 // section.bg-4{
 // 	padding: 0px 0px 0px 0px;
