--- a/app/styles/partials/noivos.scss
+++ b/app/styles/partials/noivos.scss
@@ -2,6 +2,9 @@
 	Noivos
 =================================== */
 
+#o-casal > .container{
+    margin-top:20px;
+}
 .about_social a{
 	display: inline-block;
     position: relative;
