--- a/app/styles/partials/formulario.scss
+++ b/app/styles/partials/formulario.scss
@@ -1,253 +1,6 @@
-.cw-form {
-    display: table;
-    width: 100%;
-    padding: 12px 18px 20px;
-    background-color: #FFF;
-    border-top: 2px solid #ffcf0d;
-    box-shadow: 1px 10px 28px 0px rgba(0, 0, 0, 0.2);
-     ::placeholder {
-        color: #9b9b9b;
-        font-size: 20px;
-    }
-    fieldset {
-        border: 0 none;
-        padding: 0;
-        margin: 0;
-    }
-    label {
-        padding: 0 5px;
-        font-size: 0.75rem;
-        font-family: DIN-BOLD;
-        color: #9b9b9b;
-    }
-    select {
-        border: 0 none;
-        width: 100%;
-        border-bottom: 2px solid #d8d8d8;
-        font-size: 1rem;
-        font-family: DIN-LIGHT;
-        padding: 12px 5px 2px 5px;
-        color: #9b9b9b;
-        font-weight: 300;
-        &:focus {
-            color: #000;
-            font-weight: bold;
-        }
-        &.has-error {
-            border-bottom: 2px solid #b71923;
-            color: #b71923;
-        }
-    }
-    input {
-        width: 100%;
-        border: 0;
-        border-bottom: 2px solid #d8d8d8;
-        display: block;
-        transition: border 500ms ease-out;
-        font-size: 1rem;
-        font-weight: 300;
-        font-family: DIN-LIGHT;
-        color: #9b9b9b;
-        padding: 16px 5px 2px 5px;
-        &.has-required-error,
-        &.has-error {
-            border-bottom: 2px solid #b71923;
-            color: #b71923;
-        }
-        &:focus {
-            border-color: #000;
-            outline: none;
-            color: #000;
-            font-weight: bold;
-            &.has-required-error,
-            &.has-error {
-                border-bottom: 2px solid #b71923;
-                color: #b71923;
-            }
-        }
-    }
-}
-
-.datepicker {
-    input {
-        padding: 10px 5px 2px 5px;
-    }
-}
-
-.invalid-error,
-.msg-error {
-    display: none;
-    color: #b71923;
-    font-size: 0.6rem;
-    margin-top: 5px;
-    i {
-        font-style: normal;
-    }
-}
 
 .row {
     padding: 0 15px;
-}
-
-.cw-form__container {
-    .col-6 {
-        display: inline-block;
-        margin-right: 8%;
-        width: 45%;
-        &:last-child {
-            margin: 0;
-        }
-    }
-    .col-3 {
-        display: inline-block;
-        margin-right: 5%;
-        width: 18%;
-        &:last-child {
-            margin: 0;
-        }
-    }
-}
-
-.cw-form__input {
-    position: relative;
-    overflow: hidden;
-    padding: 1px 0 12px 0;
-    vertical-align: top;
-    select,
-    input {
-        box-shadow: none;
-    }
-    input.error {
-        border-color: #e52a1b;
-    }
-    label.error {
-        color: #e52a1b;
-        font-weight: normal;
-    }
-}
-
-.cw-form__input--adiciona {
-    @extend .cw-form__input;
-    .col-6 {
-        width: 48%;
-        display: inline-block;
-        padding: 0;
-    }
-    label {
-        text-align: left;
-    }
-}
-
-.cw-form__btn {
-    text-align: right;
-    button {
-        color: #000;
-        font-size: 0.8rem;
-        font-weight: bold;
-        text-decoration: underline;
-        cursor: pointer;
-        background-color: transparent;
-        border: 0 none;
-    }
-}
-
-.cw-form__input-tel {
-    color: #000;
-    display: flex;
-    height: 100%;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    span {
-        display: flex;
-        white-space: nowrap;
-    }
-    input {
-        display: flex;
-        margin-left: 6%;
-        max-width: none;
-    }
-    .cw-form__remove {
-        background-color: #e52a1b;
-        color: #fff;
-        border: 0 none;
-        border-radius: 50%;
-        text-indent: -90000px;
-        padding: 0px 10px;
-        position: absolute;
-        line-height: 20px;
-        cursor: pointer;
-        right: 0;
-        bottom: 5px;
-        &:after {
-            content: "";
-            font-size: 1rem;
-            color: #000;
-            display: block;
-            width: 10px;
-            height: 2px;
-            z-index: 999999;
-            position: absolute;
-            bottom: 50%;
-            left: 50%;
-            background: #fff;
-            margin-left: -5px;
-            margin-bottom: -1px;
-        }
-    }
-}
-
-.cw-form__input--inline {
-    @extend .cw-form__input;
-    input,
-    label {
-        display: inline-block;
-        width: auto;
-        margin-right: 2px;
-        vertical-align: middle;
-        font-weight: bold;
-        color: #000;
-        text-decoration: underline;
-        cursor: pointer;
-    }
-}
-
-.cw-form__legend {
-    font-family: DIN-BOLD;
-    font-size: 20px;
-    margin-bottom: 0px;
-    border: 0;
-    text-align: left;
-}
-
-.cw-btn__default {
-    width: 28%;
-}
-
-.cw-btn__action {
-    width: 65%;
-}
-
-.submit__container {
-    width: 100%;
-    button {
-        width: 100%;
-        background-color: #e52a1b;
-        color: #fff;
-        border: 0 none;
-        text-transform: uppercase;
-        font-family: DIN-LIGHT;
-        font-size: 0.85rem;
-        padding: 14px 0;
-        font-weight: bold;
-        margin-top: 10px;
-        cursor: pointer;
-        &:disabled {
-            background-color: #d4d0d0;
-            cursor: default;
-        }
-    }
 }
 
 .modal__wrap {
@@ -262,7 +15,7 @@
     background: rgba(0, 0, 0, 0.5098039215686274);
     top: 0;
     left: 0;
-    z-index: 99;
+    z-index: 99999;
     align-items: center;
     justify-content: center;
 }
@@ -285,7 +38,7 @@
 }
 
 .modal__sucess {
-    color: #0a670a;
+    color: #f9667e;
 }
 
 .modal__close {
@@ -297,31 +50,6 @@
     color: #000;
     cursor: pointer;
     z-index: 10;
-}
-
-.btn-confirm {
-    border: 0;
-    padding: 10px 15px;
-}
-
-.responseForm {
-    display: none;
-    color: #000000;
-    font-size: 15px;
-    padding: 10px 0;
-}
-
-.wrap-recaptcha {
-    &.has-error {
-        .g-recaptcha {
-            border: 2px solid #b71923;
-            color: #b71923;
-            display: inline-block;
-        }
-        .msg-error {
-            display: block;
-        }
-    }
 }
 
 .selectCenter{
