--- a/app/styles/core.scss
+++ b/app/styles/core.scss
@@ -1,6 +1,7 @@
 /* COMPONENTES */
 
 @import 'common/bootstrap.min';
+@import 'common/flipclock';
 @import 'partials/geral';
 @import 'partials/home';
 @import 'partials/header';
