--- a/app/styles/partials/geral.scss
+++ b/app/styles/partials/geral.scss
@@ -75,9 +75,9 @@ section{
 	padding: 50px 0px 50px 0px;
 }
 
-// section.bg-4{
-// 	padding: 0px 0px 0px 0px;
-// }
+section.bg-4{
+	padding: 0px 0px 0px 0px;
+}
 
 // section#o-casal{
 // 	padding: 100px 0px 100px 0px;
@@ -100,16 +100,10 @@ section{
 // 	background-size:cover;
 // 	height: 300px;
 // }
-div.bg-4{
-	background:url(../images/bg-4.jpg) no-repeat;
-	background-attachment:fixed;
-	background-size:cover;
-	height: 300px;
-}
 
-@media (max-width: 767px) {
-	section.bg-1, section.bg-2, section.bg-3, section.bg-4{
-		height: 300px;
-		background-attachment: scroll;
-	}
-}
+// @media (max-width: 767px) {
+// 	section.bg-1, section.bg-2, section.bg-3, section.bg-4{
+// 		height: 300px;
+// 		background-attachment: scroll;
+// 	}
+// }
