--- a/app/styles/partials/formulario.scss
+++ b/app/styles/partials/formulario.scss
@@ -53,9 +53,8 @@
 }
 
 .selectCenter{
-    display: inline;
-    width: 56px;
-    margin: auto;
+    width: 65px;
+    margin: 5px auto 0px auto;
 }
 
 .responseForm{
