--- a/app/styles/partials/geral.scss
+++ b/app/styles/partials/geral.scss
@@ -28,6 +28,10 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span{
 	color:#f9667e;
 }
 
+.bold{
+	font-weight: 400;
+}
+
 .title-block{
 	margin:0px auto 70px auto;
 	text-align:center;
